Fixed Font Issue on Safari
- Linked fonts absolutely instead of relatively

"It just works." - Apple

--- a/executor/style.css
+++ b/executor/style.css
@@ -52,7 +52,7 @@ body {
 }
 @font-face {
     font-family: "Bedstead";
-    src: url("../fonts/fonts/bedstead/bedstead.otf");
+    src: url("https://skylarmccauley.xyz/fonts/fonts/bedstead/bedstead.otf");
 }
 
 body, html, p, p1, p2, p3, p4, h1, h2, h3, h4, h6, b, strong, i, em, mark, small, del, ins, sub, sup, ul, li, ol, a, div {
