--- a/sileopirate/style.css
+++ b/sileopirate/style.css
@@ -52,7 +52,7 @@ body {
 }
 @font-face {
     font-family: "BlackPearl";
-    src: url("../fonts/fonts/BlackPearl/BlackPearl.ttf");
+    src: url("https://skylarmccauley.xyz/fonts/fonts/BlackPearl/BlackPearl.ttf");
 }
 
 body, html, p, p1, p2, p3, p4, h1, h2, h3, h4, h6, b, strong, i, em, mark, small, del, ins, sub, sup, ul, li, ol, a, div {
