--- a/src/css/font.css
+++ b/src/css/font.css
@@ -1,6 +1,6 @@
 @font-face {
     font-family: Product Sans;
-    src: url("../fonts/fonts/ProductSans/regular.ttf");
+    src: url("https://skylarmccauley.xyz/fonts/fonts/ProductSans/regular.ttf");
 }
 body, html, p, p1, p2, p3, p4, h1, h2, h3, h4, h6, b, strong, i, em, mark, small, del, ins, sub, sup, ul, li, ol, a, div {
     font-family: 'Product Sans';
